--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
         "php": "^8.2",
         "jenssegers/mongodb": "^5.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "mongodb/mongodb": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^9.5",
         "sebastian/environment": "^5.0"
     },
     "autoload": {
