--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "jenssegers/mongodb": "^5.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "mongodb/laravel-mongodb": "^5.4",
         "mongodb/mongodb": "^2.0"
     },
     "require-dev": {
